--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="description" content="" />
     <meta name="author" content="TemplateMo" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
@@ -234,7 +238,7 @@ https://templatemo.com/tm-540-lava-landing-page
             data-scroll-reveal="enter left move 30px over 0.6s after 0.4s"
           >
             <img
-              style="border-radius: 250px;"
+              style="border-radius: 250px"
               src="assets/images/left-image.png"
               class="img-fluid d-block mx-auto"
               alt="App"
@@ -300,7 +304,10 @@ https://templatemo.com/tm-540-lava-landing-page
             <div class="center-heading">
               <h2>People who used our product <em> Nothing</em></h2>
               <p>
-                Meet our distinguished panel of achievers who've reached unparalleled heights—all thanks to Nothing. Our exclusive product has been the secret behind some of the most mistakenly attributed accomplishments in history:
+                Meet our distinguished panel of achievers who've reached
+                unparalleled heights—all thanks to Nothing. Our exclusive
+                product has been the secret behind some of the most mistakenly
+                attributed accomplishments in history:
               </p>
             </div>
           </div>
@@ -311,11 +318,7 @@ https://templatemo.com/tm-540-lava-landing-page
             <div class="owl-carousel owl-theme">
               <div class="item service-item">
                 <div class="author">
-                  <i
-                    ><img
-                      src="assets/images/steve.jpeg"
-                      alt="Author One"
-                  /></i>
+                  <i><img src="assets/images/steve.jpeg" alt="Author One" /></i>
                 </div>
                 <div class="testimonial-content">
                   <ul class="stars">
@@ -327,7 +330,10 @@ https://templatemo.com/tm-540-lava-landing-page
                   </ul>
                   <h4>Steve Jobs</h4>
                   <p>
-                    “Thanks to Nothing, I was inspired to think differently and founded Microsoft. It's truly the best non-product for revolutionizing not just technology, but also entrepreneurship.”
+                    “Thanks to Nothing, I was inspired to think differently and
+                    founded Microsoft. It's truly the best non-product for
+                    revolutionizing not just technology, but also
+                    entrepreneurship.”
                   </p>
                   <span>Microsoft CEO</span>
                 </div>
@@ -335,9 +341,7 @@ https://templatemo.com/tm-540-lava-landing-page
               <div class="item service-item">
                 <div class="author">
                   <i
-                    ><img
-                      src="assets/images/leonardo.jpeg"
-                      alt="Second Author"
+                    ><img src="assets/images/leonardo.jpeg" alt="Second Author"
                   /></i>
                 </div>
                 <div class="testimonial-content">
@@ -350,7 +354,9 @@ https://templatemo.com/tm-540-lava-landing-page
                   </ul>
                   <h4>Leonardo DiCaprio</h4>
                   <p>
-                    “Drawing the Mona Lisa was a breeze once I embraced Nothing. It cleared my mind and my canvas, allowing true creativity to flow—never mind that I'm an actor and not the painter!”
+                    “Drawing the Mona Lisa was a breeze once I embraced Nothing.
+                    It cleared my mind and my canvas, allowing true creativity
+                    to flow—never mind that I'm an actor and not the painter!”
                   </p>
                   <span>Famous Painter</span>
                 </div>
@@ -358,9 +364,7 @@ https://templatemo.com/tm-540-lava-landing-page
               <div class="item service-item">
                 <div class="author">
                   <i
-                    ><img
-                      src="assets/images/albert.jpg"
-                      alt="Author Third"
+                    ><img src="assets/images/albert.jpg" alt="Author Third"
                   /></i>
                 </div>
                 <div class="testimonial-content">
@@ -371,7 +375,10 @@ https://templatemo.com/tm-540-lava-landing-page
                   </ul>
                   <h4>Albert Einstein</h4>
                   <p>
-                    “If I had Nothing earlier, who knows, maybe I would have invented the Internet in between my theories. Nothing is the perfect companion for thought experiments and mistaken technological attributions.”
+                    “If I had Nothing earlier, who knows, maybe I would have
+                    invented the Internet in between my theories. Nothing is the
+                    perfect companion for thought experiments and mistaken
+                    technological attributions.”
                   </p>
                   <span>Founder of the Internet</span>
                 </div>
@@ -393,7 +400,10 @@ https://templatemo.com/tm-540-lava-landing-page
                   </ul>
                   <h4>Cleopatra</h4>
                   <p>
-                    "Conquering the lunar landscape was a simple feat once I had Nothing. It’s the ultimate tool for ruling empires and exploring celestial bodies—historical accuracy notwithstanding.
+                    "Conquering the lunar landscape was a simple feat once I had
+                    Nothing. It’s the ultimate tool for ruling empires and
+                    exploring celestial bodies—historical accuracy
+                    notwithstanding.
                   </p>
                   <span>First Woman on the Moon</span>
                 </div>
@@ -411,21 +421,20 @@ https://templatemo.com/tm-540-lava-landing-page
         <div class="footer-content">
           <div class="row">
             <div class="right-content col-lg-12 col-md-12 col-sm-12">
-              <h2 class="text-center">Buy Now <em>Nothing</em></h2>
-              <p>
-                So What are you waiting for? Buy Now our product and be the next brilliant person that will change the world!!!
-              </p>
-              <a href="https://rickroll.it/rickroll.mp4" target="_blank" class="main-button-slider">Discover Nothing</a>
+              <h2 class="text-center">So What are you waiting for?</h2>
+              <a
+                href="https://rickroll.it/rickroll.mp4"
+                target="_blank"
+                class="main-button-slider animate__animated animate__pulse a animate__infinite"
+                >Buy Nothing</a
+              >
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-12">
             <div class="sub-footer">
-              <p>
-                Copyright &copy; 2020 Lava Landing Page | Designed by
-                <a rel="nofollow" href="https://templatemo.com">TemplateMo</a>
-              </p>
+              <p>Copyright &copy; 1970 Nothing Landing Page</p>
             </div>
           </div>
         </div>
